# docs/swagger.json
@@ -8,6 +8,38 @@
         "version": "1.0"
     },
     "paths": {
+        "/categories": {
+            "get": {
+                "description": "Получить список всех доступных категорий событий",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "categories"
+                ],
+                "summary": "Получить все категории",
+                "responses": {
+                    "200": {
+                        "description": "Список категорий",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Category"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/events": {
             "get": {
                 "description": "Получить все существующие события",
@@ -21,6 +53,20 @@
                     "events"
                 ],
                 "summary": "Получить все события",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Номер страницы (по умолчанию 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Количество событий на странице (по умолчанию 30)",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -78,7 +124,7 @@
         },
         "/events/categories/{category}": {
             "get": {
-                "description": "Возвращает события по категории",
+                "description": "Возвращает события по ID категории",
                 "produces": [
                     "application/json"
                 ],
@@ -451,8 +497,8 @@
                 "capacity": {
                     "type": "integer"
                 },
-                "category": {
-                    "type": "string"
+                "category_id": {
+                    "type": "integer"
                 },
                 "description": {
                     "type": "string"
@@ -465,6 +511,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "image": {
+                    "type": "string"
                 },
                 "location": {
                     "type": "string"
@@ -509,6 +558,17 @@
                     "type": "string"
                 },
                 "field": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Category": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
