# internal/models/category.go
@@ -1,0 +1,6 @@
+package models
+
+type Category struct {
+	ID   int    `json:"id"`
+	Name string `json:"name"`
+}
